--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@mui/x-data-grid": "^7.5.1",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.5",
+    "apexcharts": "^4.5.0",
     "axios": "^1.7.2",
     "chance": "^1.1.12",
     "compressorjs": "^1.2.1",
@@ -36,9 +37,11 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.488.0",
     "moment": "^2.30.1",
     "npm": "^10.8.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-csv": "^2.2.2",
     "react-datepicker": "^8.0.0",
