--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "compressorjs": "^1.2.1",
     "dom-to-image": "^2.6.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.9.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "i": "^0.3.7",
